# server/src/routes/admin.ts
@@ -1,6 +1,6 @@
 import { Router } from "express";
 import { runInContext } from "vm";
-import { home, backup, addProduct, removeProduct, login, signup, getLogs, checkBalance, setDenominations } from "../controllers/admin.controller";
+import { home, backup, addProduct, removeProduct, login, signup, getLogs, checkBalance, setDenominations, changePrice, addFunds, withdrawFunds } from "../controllers/admin.controller";
 import { authAdmin } from "../middleware/authAdmin";
 
 const router = Router();
@@ -24,5 +24,11 @@ router.get("/logs", authAdmin, getLogs);
 router.get("/check-balance", authAdmin, checkBalance);
 
 router.post("/change-denominations", authAdmin, setDenominations);
+
+router.post("/add-funds", authAdmin, addFunds);
+
+router.post("/withdraw", authAdmin, withdrawFunds);
+
+router.post("/change-price", authAdmin, changePrice);
 
 export default router;
